--- a/index.html
+++ b/index.html
@@ -1,23 +1,133 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DidiMa Duo | Redirect</title>
-    <link rel="icon" href="img/icon.svg">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DidiMa Duo | Redirect</title>
+  <link rel="icon" href="img/icon.svg">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background: url("background.png") no-repeat center center fixed;
+  background-size: cover;
+  overflow: hidden;
+  color: #fff;
+}
+
+
+    .overlay {
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.55);
+      backdrop-filter: blur(4px);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      animation: fadeIn 1.5s ease-in-out;
+      transition: opacity 1s ease;
+    }
+
+    .overlay.fade-out {
+      opacity: 0;
+    }
+
+    .logo {
+      width: 200px;
+      animation: floatIn 2s ease-in-out;
+      filter: brightness(0) invert(1);
+      width: 300px;
+      user-select: none;
+    }
+
+    .logo:hover {
+  transform: scale(1.05) rotate(-2deg); /* licht schuin en groter */
+  transition: transform 0.3s ease;
+  cursor: pointer;
+}
+
+    h1 {
+      font-size: 2.2rem;
+      margin-bottom: 30px;
+      font-weight: 500;
+      color: #f7d774;
+      text-shadow: 0px 0px 10px rgba(0,0,0,0.6);
+      animation: fadeIn 2s ease-in-out;
+      user-select: none;
+      
+    }
+
+    h1:hover {
+        transform: scale(1.1);
+        color: #fff3b0;
+        transition: transform 0.3s ease, color 0.3s ease;
+        cursor: default;
+        }
+
+    .loader {
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+      border: 4px solid rgba(255, 215, 116, 0.4);
+      border-top-color: #f7d774;
+      animation: spin 1.5s linear infinite, pulse 2s ease-in-out infinite;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 0.65rem;
+      opacity: 0.85;
+      animation: fadeIn 3s ease-in-out;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    @keyframes pulse {
+      0%, 100% { box-shadow: 0 0 0 0 rgba(247, 215, 116, 0.5); }
+      50% { box-shadow: 0 0 20px 10px rgba(247, 215, 116, 0.2); }
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes floatIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </head>
 <body>
-    <div class="card">
-        <h1>Je wordt doorgestuurd...</h1>
-        <div class="spinner"></div>
-    </div>
+  <div class="overlay" id="overlay">
+    <img src="logo_dmd.svg" alt="DidiMa Duo Logo" class="logo" draggable="false">
+    <h1>Je wordt doorgestuurd...</h1>
+    <div class="loader"></div>
+    <p>© Didima Duo | 2025</p>
+  </div>
 
-    <script>
-        setTimeout(function() {
-            window.location.href = "https://didimaduo.wixsite.com/didima";
-        }, 3000);
-    </script>
+  <script>
+    setTimeout(() => {
+      const overlay = document.getElementById("overlay");
+      overlay.classList.add("fade-out");
+
+      setTimeout(() => {
+        window.location.href = "https://didimaduo.wixsite.com/didima";
+      }, 1000);
+    }, 3000);
+  </script>
 </body>
 </html>
