--- a/index.html
+++ b/index.html
@@ -12,49 +12,54 @@
       box-sizing: border-box;
     }
 
-body {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: url("background.png") no-repeat center center fixed;
-  background-size: cover;
-  overflow: hidden;
-  color: #fff;
-}
+    body {
+      height: 100vh;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: url("background.png") no-repeat center center fixed;
+      background-size: cover;
+      overflow: hidden;
+      color: #fff;
+    }
 
-
+    /* Overlay blijft altijd */
     .overlay {
-      position: absolute;
+      position: fixed;
       top: 0; left: 0; right: 0; bottom: 0;
       background: rgba(0,0,0,0.55);
       backdrop-filter: blur(4px);
+      -webkit-backdrop-filter: blur(4px); /* Safari/Chrome */
+      z-index: 1;
+    }
+
+    /* Content dat kan uitfaden */
+    .content {
+      position: relative;
+      z-index: 2;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      height: 100vh;
       animation: fadeIn 1.5s ease-in-out;
       transition: opacity 1s ease;
     }
 
-    .overlay.fade-out {
+    .content.fade-out {
       opacity: 0;
     }
 
     .logo {
-      width: 200px;
+      width: 300px;
       animation: floatIn 2s ease-in-out;
       filter: brightness(0) invert(1);
-      width: 300px;
       user-select: none;
+      transition: transform 0.3s ease;
     }
 
     .logo:hover {
-  transform: scale(1.05) rotate(-2deg); /* licht schuin en groter */
-  transition: transform 0.3s ease;
-  cursor: pointer;
-}
+      transform: scale(1.05) rotate(-2deg);
+      cursor: pointer;
+    }
 
     h1 {
       font-size: 2.2rem;
@@ -64,15 +69,14 @@ body {
       text-shadow: 0px 0px 10px rgba(0,0,0,0.6);
       animation: fadeIn 2s ease-in-out;
       user-select: none;
-      
+      transition: transform 0.3s ease, color 0.3s ease;
     }
 
     h1:hover {
-        transform: scale(1.1);
-        color: #fff3b0;
-        transition: transform 0.3s ease, color 0.3s ease;
-        cursor: default;
-        }
+      transform: scale(1.1);
+      color: #fff3b0;
+      cursor: default;
+    }
 
     .loader {
       width: 70px;
@@ -112,7 +116,9 @@ body {
   </style>
 </head>
 <body>
-  <div class="overlay" id="overlay">
+  <div class="overlay"></div>
+
+  <div class="content" id="content">
     <img src="logo_dmd.svg" alt="DidiMa Duo Logo" class="logo" draggable="false">
     <h1>Je wordt doorgestuurd...</h1>
     <div class="loader"></div>
@@ -121,14 +127,13 @@ body {
 
   <script>
     setTimeout(() => {
-      const overlay = document.getElementById("overlay");
-      overlay.classList.add("fade-out");
+      const content = document.getElementById("content");
+      content.classList.add("fade-out");
 
       setTimeout(() => {
         window.location.href = "https://didimaduo.wixsite.com/didima";
-      }, 0600);
+      }, 600);
     }, 3000);
   </script>
 </body>
 </html>
-
