--- a/index.html
+++ b/index.html
@@ -15,23 +15,21 @@
     body {
       height: 100vh;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: url("background.png") no-repeat center center fixed;
+      background: #000 url("background.png") no-repeat center center fixed;
       background-size: cover;
       overflow: hidden;
       color: #fff;
     }
 
-    /* Overlay blijft altijd */
     .overlay {
       position: fixed;
       top: 0; left: 0; right: 0; bottom: 0;
       background: rgba(0,0,0,0.55);
       backdrop-filter: blur(4px);
-      -webkit-backdrop-filter: blur(4px); /* Safari/Chrome */
+      -webkit-backdrop-filter: blur(4px);
       z-index: 1;
     }
 
-    /* Content dat kan uitfaden */
     .content {
       position: relative;
       z-index: 2;
@@ -39,18 +37,15 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      animation: fadeIn 1.5s ease-in-out;
-      transition: opacity 1s ease;
-    }
-
-    .content.fade-out {
-      opacity: 0;
+      min-height: 100vh;
+      text-align: center;
+      padding: 20px;
     }
 
     .logo {
       width: 300px;
-      animation: floatIn 2s ease-in-out;
+      max-width: 80%;
+      height: auto;
       filter: brightness(0) invert(1);
       user-select: none;
       transition: transform 0.3s ease;
@@ -62,18 +57,17 @@
     }
 
     h1 {
-      font-size: 2.2rem;
-      margin-bottom: 30px;
+      font-size: clamp(1.4rem, 5vw, 2.2rem);
+      margin: 20px 0 30px 0;
       font-weight: 500;
       color: #f7d774;
       text-shadow: 0px 0px 10px rgba(0,0,0,0.6);
-      animation: fadeIn 2s ease-in-out;
       user-select: none;
       transition: transform 0.3s ease, color 0.3s ease;
     }
 
     h1:hover {
-      transform: scale(1.1);
+      transform: scale(1.05);
       color: #fff3b0;
       cursor: default;
     }
@@ -89,9 +83,8 @@
     }
 
     p {
-      font-size: 0.65rem;
-      opacity: 0.85;
-      animation: fadeIn 3s ease-in-out;
+      font-size: 0.75rem;
+      opacity: 0.9;
     }
 
     @keyframes spin {
@@ -104,14 +97,28 @@
       50% { box-shadow: 0 0 20px 10px rgba(247, 215, 116, 0.2); }
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 1.6rem;
+      }
+      .loader {
+        width: 60px;
+        height: 60px;
+      }
     }
 
-    @keyframes floatIn {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
+    @media (max-width: 480px) {
+      .logo {
+        width: 200px;
+      }
+      h1 {
+        font-size: 1.3rem;
+        margin-bottom: 20px;
+      }
+      .loader {
+        width: 50px;
+        height: 50px;
+      }
     }
   </style>
 </head>
@@ -121,18 +128,13 @@
   <div class="content" id="content">
     <img src="logo_dmd.svg" alt="DidiMa Duo Logo" class="logo" draggable="false">
     <h1>Je wordt doorgestuurd...</h1>
-    <div class="loader"></div>
+    <div class="loader" aria-hidden="true"></div>
     <p>© Didima Duo | 2025</p>
   </div>
 
   <script>
     setTimeout(() => {
-      const content = document.getElementById("content");
-      content.classList.add("fade-out");
-
-      setTimeout(() => {
-        window.location.href = "https://didimaduo.wixsite.com/didima";
-      }, 600);
+      window.location.href = "https://didimaduo.wixsite.com/didima";
     }, 3000);
   </script>
 </body>
